--- a/kiva_analysis_assignment.ipynb
+++ b/kiva_analysis_assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcfBs2uhwbAtM7ZgB228Nf",
+      "authorship_tag": "ABX9TyPtxPPT3Q9bVe1PjzWc660L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1276,6 +1276,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Interpretation:**  \n",
+        "Agriculture, Food, and Retail are the sectors with the highest total funded amount and number of loans.  \n",
+        "This suggests that these sectors dominate Kiva’s portfolio due to high borrower demand, not because individual loans are exceptionally large.  \n",
+        "Median loan amounts across sectors are relatively similar (around 400–500 USD), confirming that frequency drives total funding more than loan size.\n"
+      ],
+      "metadata": {
+        "id": "HCki83gPN3lg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Question 2 – How do loan sizes differ across currencies?\n",
         "\n",
         "**Objective:** Compare the typical loan size across currencies using the `loan_amount_usd` variable.\n"
@@ -1565,6 +1577,18 @@
           "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Interpretation:**  \n",
+        "Loan sizes vary significantly across currencies, even when converted to USD.  \n",
+        "Currencies like PYG and RWF have much higher mean and median loan amounts, indicating that local economic conditions and Kiva partner practices influence typical loan size.  \n",
+        "Lower-value currencies, such as NGN or PHP, correspond to smaller loans, reflecting lower-cost microfinance contexts.\n"
+      ],
+      "metadata": {
+        "id": "rIfQOP-tN61o"
+      }
     },
     {
       "cell_type": "markdown",
@@ -1886,6 +1910,18 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Interpretation:**  \n",
+        "Food-related loans show strong variation by country and currency.  \n",
+        "Countries like the United States and Paraguay have high median loan sizes (>3,000 USD), while others remain smaller.  \n",
+        "This highlights that the same sector (“Food”) can have very different funding scales depending on the local context and partner strategies.\n"
+      ],
+      "metadata": {
+        "id": "rd-w1KssN_tB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Question 4 – Borrower gender composition and loan size\n",
         "\n",
         "**Objective:** Investigate differences in loan size between different borrower types (female, male, mixed, group, N/A).\n"
@@ -2137,6 +2173,19 @@
           "execution_count": 16
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Interpretation:**  \n",
+        "Mixed-gender groups receive the largest loans, followed by male borrowers.  \n",
+        "Female borrowers, while representing the majority, tend to receive smaller loans (~425 USD median).  \n",
+        "This aligns with global microfinance trends: women are frequent borrowers for small-scale projects, whereas mixed or male groups tend to take larger loans.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ztOyYkjNOJRy"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2395,6 +2444,17 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Interpretation:**  \n",
+        "In the Philippines, the number of loans increased from 2014 to 2016, then decreased in 2017, while the average loan size remained stable (~314–345 USD).  \n",
+        "This indicates that total lending volume changes are driven primarily by borrower count, not by changes in individual loan size.\n"
+      ],
+      "metadata": {
+        "id": "Y2MFBQ6wOMiv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Question 6 – Who receives the largest 1% of loans?\n",
         "\n",
         "**Objective:** Identify sectors, currencies, and repayment intervals most common among the largest 1% of loans.\n"
@@ -2510,6 +2570,18 @@
           "execution_count": 19
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Interpretation:**  \n",
+        "The largest 1% of loans cluster in sectors like Food, Retail, and Agriculture, and are mostly in USD, PYG, and RWF.  \n",
+        "Repayment intervals are mostly monthly or irregular, reflecting structured business loans or seasonal projects.  \n",
+        "This shows that very large loans are concentrated in capital-intensive sectors and stable financial environments.\n"
+      ],
+      "metadata": {
+        "id": "tT_Ij2DmOO5y"
+      }
     },
     {
       "cell_type": "markdown",
